--- a/shoppingbackendGit/pom.xml
+++ b/shoppingbackendGit/pom.xml
@@ -28,6 +28,19 @@
   </dependencies>
 
   <build>
+  <!--FOR Updated version of JAVA JRE-->
+	<plugins>
+	  <plugin>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.7.0</version>
+         <configuration>
+         <source>1.8</source>
+         <target>1.8</target>
+         </configuration>
+       </plugin>
+	</plugins>
+	
+	
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
@@ -39,10 +52,10 @@
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
         </plugin>
-        <plugin>
+       <!--  <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.7.0</version>
-        </plugin>
+        </plugin> -->
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.20.1</version>
